--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html><body><h1>MaisonTaqvaylit</h1></body></html>
+<!doctype html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>MaisonTaqvaylit — Bijoux berbères</title>
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css"></head>
+<body data-page="home"><header><div class="container nav">
+<a class="logo" href="index.html">MaisonTaqvaylit</a>
+<nav>
+  <a href="shop.html" >Boutique</a>
+  <a href="about.html" >Savoir‑faire</a>
+  <a href="faq.html" >FAQ</a>
+  <a href="cart.html" class="btn"><span>Panier</span> <span class="badge" data-cart-count>0</span></a>
+</nav></div></header>
+<main class="container"><section class="hero"><h1>Héritage berbère. <br>Élégance d’aujourd’hui.</h1>
+<p>Des pièces en argent 925 et émail inspirées des motifs kabyles. Chaque bijou est façonné avec soin, pour durer.</p>
+<div><a class="btn primary" href="shop.html">Découvrir la boutique</a> <a class="btn" href="about.html">Notre savoir‑faire</a></div>
+<div class="banner">Livraison offerte dès 120€ • Paiement sécurisé • Retours sous 14 jours</div></section>
+<h2>Nos nouveautés</h2><div id="homeGrid" class="grid cards"></div></main><footer><div class="container" style="padding:2rem 0;border-top:1px solid #e6e2dc;background:#fff;margin-top:3rem">
+<div>© MaisonTaqvaylit — Bijoux berbères, âme contemporaine.</div><div class="muted">Argent 925 • Émail traditionnel • Retours 14 jours</div></div></footer>
+<script src="app.js"></script></body></html>
